Fixed navbar height cutting off last anchor tag

--- a/src/components/header/NavLinks.css
+++ b/src/components/header/NavLinks.css
@@ -7,7 +7,7 @@
 }
 
 .isVisible {
-    height: 190px;
+    height: 200px;
 }
 
 .navlinks a {
